# iRB-Engine

./: .gitignore  LICENSE  README.md
source/: CMakeLists.txt  CMakeLists[CURRENT].txt  main.cpp
source/iRB_Engine/GameObject/: Actor.cpp  Model.cpp  Model.h  Vector2D_operators.cpp  Vector2D_operators.h
source/libraries/GameObject/: Actor.h  BoundingBox.cpp  BoundingBox.h  Vector2D.h  Vector2D_operators.cpp
source/libraries/Time/: Clock.cpp  Clock.h
